avoid using Integer constructor